--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,13 @@ margin: 0;
 html{
     font-size:62.5%;
 }
+
+progress {
+    width: 100%;
+    background-color: black;
+    color: red;
+}
+
+progress::-moz-progress-bar{
+    background-color: red;
+}
